[project]
name = "dash-test"
version = "0.1.0"
description = ""
authors = [
    {name = "yannick42",email = "yannick4283@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dash (>=2.18.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
