[project]
name = "dash-test"
version = "0.1.0"
description = ""
authors = [
    {name = "yannick",email = "yannick@local.xxx"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "dash (>=2.18.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "dash-bootstrap-components (>=1.6.0,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "jax (>=0.5.0,<0.6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
